# life-os-agents

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  grill-me-skill.md  life-os-vision.md  phase-1-finances.md  pyproject.toml  reinforcement-learning-spec.md
data/finance/: sample_transactions.csv
day5/: submission.ipynb
evals/: golden_set.json  run_eval.py
src/: __init__.py  config.py
src/agents/: __init__.py  board.py  daily_guide.py  mentor.py  orchestrator.py  signal_agent.py
src/eval/: checks.py
src/finance/: __init__.py  analyze.py  categorize.py  pdf_loader.py  safe_to_spend.py  statements.py
src/ingestion/: __init__.py  chunker.py  loader.py  tracker.py
src/mcp_server/: __init__.py  server.py
src/providers/: __init__.py  aws.py  base.py  factory.py  gcp.py  local.py
src/retrieval/: __init__.py  naive.py  vector_store.py
src/serving/: __init__.py  cli.py  finance_cli.py
src/serving/pipeline/: app.py  gcs_helper.py  processor.py
src/signals/: __init__.py  sources.py
tests/: __init__.py  test_board.py  test_chunker.py  test_daily_guide.py  test_eval_checks.py  test_finance.py  test_ingestion.py  test_loader_pdf.py  test_local_provider.py  test_mcp_server.py  test_mentor.py  test_orchestrator.py  test_pdf_loader.py  test_pipeline_e2e.py  test_providers.py  test_safe_to_spend.py  test_serving_pipeline.py  test_signal_agent.py
