[project]
name = "rag-lab"
version = "0.1.0"
description = "A multi-cloud RAG benchmark harness comparing AWS Bedrock and GCP Vertex AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "boto3>=1.34.0",
    "google-cloud-aiplatform>=1.44.0",
    "google-cloud-storage>=2.15.0",
    "langgraph>=0.0.30",
    "ragas>=0.1.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.28",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.1",
    "sec-edgar-downloader>=5.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pypdf>=6.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "locust>=2.24.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "reportlab>=4.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
